--- a/ui/sidepanel.html
+++ b/ui/sidepanel.html
@@ -84,6 +84,7 @@
     </div>
 
     <script src="../modules/storage.js"></script>
+    <script src="../lib/summarizer.js"></script>
     <script src="../lib/ai_engine.js"></script>
     <script src="ui_manager.js"></script>
     <script src="view_controller.js"></script>
