Bug fix where sources were prematurely removed

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -229,7 +229,7 @@
 
                     <div id="exp-result-container" class="exp-result hidden">
                         <div class="exp-score-row">
-                            <span class="exp-score-label">AI Score</span>
+                            <span class="exp-score-label">Semantic Score</span>
                             <span id="exp-score-val" class="exp-score-val">--%</span>
                         </div>
                         <div class="exp-breakdown">
