--- a/ui/settings.html
+++ b/ui/settings.html
@@ -174,10 +174,22 @@
                         <input type="text" id="inspector-search"
                             placeholder="Filter by title, url:domain, or h1:target...">
                     </div>
-                    <label class="checkbox-container"
-                        style="margin: 0; white-space: nowrap; font-size: 12px; color: var(--text-dim);">
-                        <input type="checkbox" id="show-ignored-toggle"> Show Ignored
-                    </label>
+                    <div class="toolbar-filters">
+                        <select id="inspector-source-filter" class="inspector-select">
+                            <option value="all">All Sources</option>
+                            <option value="tabs">Active Tabs</option>
+                            <option value="history">History</option>
+                            <option value="bookmarks">Bookmarks</option>
+                        </select>
+                        <label class="checkbox-container" id="inspector-local-container"
+                            style="margin: 0; white-space: nowrap; font-size: 12px; color: var(--text-dim);">
+                            <input type="checkbox" id="inspector-local-only"> Local Only
+                        </label>
+                        <label class="checkbox-container"
+                            style="margin: 0; white-space: nowrap; font-size: 12px; color: var(--text-dim);">
+                            <input type="checkbox" id="show-ignored-toggle"> Show Ignored
+                        </label>
+                    </div>
                     <button id="refresh-inspector" class="btn-refresh">Refresh Index</button>
                 </div>
 
@@ -187,9 +199,13 @@
                             <tr>
                                 <th class="col-status sortable" data-sort="status">Status <span
                                         class="sort-icon"></span></th>
+                                <th class="col-last-visited sortable" data-sort="lastVisitTime">Last Visited <span
+                                        class="sort-icon"></span></th>
                                 <th class="col-title sortable" data-sort="title">Page Title <span
                                         class="sort-icon"></span></th>
                                 <th class="col-url sortable" data-sort="url">URL <span class="sort-icon"></span></th>
+                                <th class="col-visits sortable" data-sort="visitCount">Visits <span
+                                        class="sort-icon"></span></th>
                                 <th class="col-health sortable" data-sort="health">Score <span class="sort-icon"></span>
                                 </th>
                             </tr>
@@ -209,7 +225,18 @@
                 <button id="close-drawer">×</button>
             </div>
             <div class="drawer-content">
-                <a id="drawer-url-link" target="_blank" class="url-display-link">https://example.com</a>
+                <div class="url-display-container">
+                    <a id="drawer-url-link" target="_blank" class="url-display-link">https://example.com</a>
+                    <div class="split-ignore-container visible-always">
+                        <button class="feedback-btn btn-ignore-main" title="Ignore options">🚫</button>
+                        <div class="split-ignore-menu">
+                            <button class="ignore-action-btn btn-ignore-site"
+                                title="Ignore all results from this site">🌐</button>
+                            <button class="ignore-action-btn btn-ignore-page"
+                                title="Never show this specific page again">📄</button>
+                        </div>
+                    </div>
+                </div>
 
                 <div class="drawer-section">
                     <label>Editable Metadata</label>
