polish: proper UI styling for adding poison keywords

--- a/ui/settings.html
+++ b/ui/settings.html
@@ -129,7 +129,7 @@
 
                 <section id="patterns" class="settings-section">
                     <div class="section-title">Ignored Patterns</div>
-                    <div class="control-group pattern-add-box">
+                    <div class="control-group">
                         <input type="text" id="pattern-input" placeholder="e.g. *example.com*">
                         <button id="add-pattern-btn" class="btn-primary">Add</button>
                     </div>
@@ -141,7 +141,7 @@
                     <p class="field-subtext">Penalize links containing specific noise words to avoid irrelevant semantic
                         matches.</p>
 
-                    <div class="control-group noise-add-box">
+                    <div class="control-group">
                         <input type="text" id="poison-input" placeholder="e.g. login, sign in...">
                         <select id="poison-level">
                             <option value="soft">Minor Noise (0.3x)</option>
